# mediainterface

./: .gitignore  AGENTS.md  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: ci.yml  publish.yml
examples/: build.gradle.kts
examples/src/main/java/org/endlesssource/mediainterface/examples/: EventDrivenMediaExample.java  MediaControlCliExample.java  SimpleMediaLoggerExample.java  SwingNowPlayingExample.java
mediainterface-all/: build.gradle.kts
mediainterface-core/: build.gradle.kts
mediainterface-core/src/main/java/org/endlesssource/mediainterface/: PlatformSupport.java  SystemMediaFactory.java
mediainterface-core/src/main/java/org/endlesssource/mediainterface/api/: ArtworkDecoder.java  MediaSession.java  MediaSessionListener.java  MediaTransportControls.java  NowPlaying.java  PlaybackState.java  SystemMediaInterface.java  SystemMediaOptions.java  TransportCapabilities.java
mediainterface-core/src/main/java/org/endlesssource/mediainterface/spi/: PlatformMediaProvider.java
mediainterface-core/src/test/java/org/endlesssource/mediainterface/: SystemMediaFactoryDummyProviderTest.java
mediainterface-core/src/test/java/org/endlesssource/mediainterface/api/: ArtworkDecoderTest.java  SystemMediaOptionsTest.java
mediainterface-core/src/test/java/org/endlesssource/mediainterface/test/: DummyPlatformMediaProvider.java  DummySystemMediaInterface.java
mediainterface-linux/: build.gradle.kts
mediainterface-macos/: build.gradle.kts
mediainterface-macos/src/main/resources/native/macos/adapter/: mediaremote_adapter.pl
mediainterface-macos/src/native/macos/: CMakeLists.txt  MediaRemoteAdapter.h  MediaRemoteAdapter.m  MediaRemoteAdapterTestClient.m
mediainterface-windows/: build.gradle.kts
mediainterface-windows/src/native/windows/: CMakeLists.txt  bridge_controls.cpp  bridge_init.cpp  bridge_query.cpp  bridge_seh.cpp  bridge_shared.cpp  bridge_shared.h  mediainterface_winrt.cpp
(+20 files in other folders)
